# sirara_core

./: Cargo.toml  Config.toml
src/: lib.rs  main.rs
src/application/: error.rs  mod.rs
src/application/commands/: create_ledger_account.rs  initiate_bank_payout.rs  mod.rs  post_journal.rs  reverse_journal.rs  set_ledger_account_active.rs
src/application/contracts/: inventory.rs  ledger.rs  mod.rs  rail.rs
src/application/dtos/: account_balance.rs  create_account.rs  create_transfer.rs  destination.rs  journal.rs  journal_line.rs  ledger_account.rs  list_journal_filter.rs  mod.rs  owner_balance.rs  post_journal.rs  transfer_intent.rs  transfer_type.rs
src/application/messages/: interbank.rs  mod.rs
src/application/query/: get_account.rs  get_account_balance.rs  get_journal.rs  get_journal_by_external_ref.rs  get_owner_balances.rs  list_accounts_by_owner.rs  list_journals.rs  mod.rs
src/application/services/: inter_transfer.rs  intra_transfer.rs  ledger.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/aggregate/: aggregate_root.rs  journal.rs  mod.rs
src/domain/entities/: ledger_account.rs  mod.rs
src/domain/events/: domain_events.rs  mod.rs
src/domain/repository/: error.rs  ledger_repository.rs  mod.rs
src/domain/services/: ledger_posting_service.rs  mod.rs  tt.rs
src/domain/value_objects/: asset.rs  asset_code.rs  external_ref.rs  external_ref_type.rs  mod.rs  money.rs  public_id.rs
src/infrastructure/: error.rs  mod.rs
src/infrastructure/persistence/: error_map.rs  ledger.rs  ledger_tx.rs  mod.rs  uow.rs  (+2 more)
tests/: ledger_db_invariants.rs
(+31 files in other folders)
