[package]
name = "sirara_core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
bigdecimal = "0.4"
uuid = { version = "1.19.0", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "bigdecimal", "macros",  "uuid", "bigdecimal"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1"
humantime = "2"
tokio = { version = "1", features = ["full"] }
reqwest = "0.13.1"
num-traits = "0.2.19"
async-trait = "0.1.89"